--- a/03-DOM&HandlingEvents/findingelements.html
+++ b/03-DOM&HandlingEvents/findingelements.html
@@ -11,8 +11,12 @@
     <p>Find elements by tag name</p>
 
     <script>
-        // a JavaScript code here ...
-
+        console.log(document.getElementsByTagName('h1')[0].innerHTML);
+        console.log(document.getElementById('someTest').innerHTML);
+        console.log(document.getElementsByClassName('important')[0].innerHTML);
+        console.log(document.getElementsByTagName('p')[2].innerHTML);
+        //console.log(document);
+        //console.log();
     </script>
 </body>
 
