--- a/03-DOM&HandlingEvents/alter.html
+++ b/03-DOM&HandlingEvents/alter.html
@@ -4,24 +4,49 @@
 		<title>Pink Floyd</title>
 		<meta charset="UTF-8">
 	</head>
-	<body>
-		<h1>Another Brick in the Wall</h1>
-		<h3>Pink Floyd</h3>
-		<p>We don't need no education<br>
+	<body id="body" ondblclick="backChanger()">
+		<h1 id="extended-title" onclick="addText()">Another Brick</h1>
+		<h3 onclick="bandDesc()">Pink Floyd</h3>
+		<p id="style" oncopy="copyrights()" onclick="fontChanger()">We don't need no education<br>
 		We don't need no thought control<br>
 		No dark sarcasm in the classroom<br>
 		Teachers leave them kids alone<br>
 		Hey! Teachers! Leave them kids alone<br>
 		All in all it's just another brick in the wall<br>
 		All in all you're just another brick in the wall</p>
-		
-		<p style="visibility: hidden;">Pink Floyd were an English rock band formed in London.<br>
+
+		<p style="visibility: hidden;" onclick="showImg(this)">
+			Pink Floyd were an English rock band formed in London.<br>
 		They achieved international acclaim with their progressive<br>
 		and psychedelic music.</p>
-		
+
 		<script>
-			// a JavaScript code here ...
-			
+		function addText(){
+			document.getElementById('extended-title').innerHTML = 'Another Brick in the Wall';
+
+		};
+		function bandDesc() {
+			document.getElementsByTagName('p')[1].style.visibility = 'visible';
+
+		};
+		function fontChanger() {
+			document.getElementById('style').style.fontStyle = 'italic';
+
+		};
+		function backChanger() {
+			document.getElementById('body').style.background = 'yellow';
+
+		};
+		function copyrights() {
+			alert("Stop copying, you thief!")
+
+		};
+		function showImg() {
+			const image = document.createElement('img');
+			image.src = 'https://upload.wikimedia.org/wikipedia/en/d/d6/Pink_Floyd_-_all_members.jpg';
+			document.body.appendChild(image);
+
+		}
 		</script>
 	</body>
 </html>
