--- a/03-DOM&HandlingEvents/form.html
+++ b/03-DOM&HandlingEvents/form.html
@@ -11,13 +11,19 @@
 	<form>
 		<p>University:<br><input type="text"></p>
 		<p>Address:<br><input type="text"></p>
-		<button type="button">Hint</button>
+		<button type="button" onclick="hintInput()">Hint</button>
 	</form>
 
 	<script>
 		// a JavaScript code here ...
 		var university = "Cracow University of Economics";
 		var address = "Rakowicka 27, Krakow, POLAND";
+
+		function hintInput() {
+		document.getElementsByTagName('input')[0].value = university;
+		document.getElementsByTagName('input')[1].value = address;
+
+	};
 
 	</script>
 </body>
