--- a/03-DOM&HandlingEvents/shoppinglist.html
+++ b/03-DOM&HandlingEvents/shoppinglist.html
@@ -4,6 +4,7 @@
 <head>
     <title>Shopping List</title>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -27,6 +28,10 @@
       document.getElementsByTagName('ol')[0].appendChild(list);
 
     }
+      $(document).on('dblclick', 'li', function () {
+        $(this).remove();
+
+      });
 
     </script>
 </body>
