Zadanie wykonane, shoppinglist_jsQuerry

--- a/03-DOM&HandlingEvents/shoppinglist.html
+++ b/03-DOM&HandlingEvents/shoppinglist.html
@@ -28,9 +28,8 @@
       document.getElementsByTagName('ol')[0].appendChild(list);
 
     }
-      $(document).on('dblclick', 'li', function () {
+      $('ol').on('dblclick', 'li', function () {
         $(this).remove();
-
       });
 
     </script>
