--- a/04-JSON&DataTransfer/chart.html
+++ b/04-JSON&DataTransfer/chart.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ready States</title>
+		<title>Charts</title>
 		<meta charset="UTF-8"/>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 	</head>
 	<body>
-		<h1>Ready States</h1>
-		<p>Open a console and then click the button</p>
+		<h1>Chart</h1>
+		<p>Click to generate Chart</p>
 		<input type="button" value="Make a connection" onclick="connect()">
 		<canvas id="myChart"></canvas>
 		<script>
