--- a/04-JSON&DataTransfer/chart.html
+++ b/04-JSON&DataTransfer/chart.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>Chart</h1>
 		<p>Click to generate Chart</p>
-		<input type="button" value="Make a connection" onclick="connect()">
+		<input type="button" value="Make a chart" onclick="connect()">
 		<canvas id="myChart"></canvas>
 		<script>
 
