--- a/05-VueFundamentals/employee.html
+++ b/05-VueFundamentals/employee.html
@@ -4,18 +4,45 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
+  <b>EMPLOYE RECORD</b><br>
+  <div id="app">
+    <div v-for="employee in employers">
+        Name 1: {{ employee.name1 }} <br>
+        <a v-if="employee.name2 != 0">Name 2: {{ employee.name2 }}<br></a>
+        Surname: {{ employee.surname }} <br>
+        <a v-if="employee.nationality == 'Polish'"> Pesel: {{ employee.pesel }} <br></a>
+        <a v-else> Nationality: {{ employee.nationality }} <br></a>
+        {{ employee.address }} <br>
+        --------------------
+    </div>
   <script>
     var app = new Vue({
       el: '#app',
       data: {
+        employers:
+        [
+          {
         name1: 'Adam',
         name2: 'Jan',
         surname: 'Majewski',
         foreigner: false,
         nationality: 'Polish',
         pesel: '92021708229',
-        address: 'ul. Szeroka 3, Kraków',
-    });
+        address: 'ul. Szeroka 3, Kraków'
+          },
+          {
+        name1: 'John',
+        name2: false,
+        surname: 'Brown',
+        foreigner: true,
+        nationality: 'USA',
+        pesel: 0,
+        address: 'Holland Drive 4, Chicago'
+            }
+          ]
+
+  }
+});
   </script>
 
 </body>
