--- a/05-VueFundamentals/films.html
+++ b/05-VueFundamentals/films.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    table
+    {
+      width: 500px;
+      border: 1px solid black;
+      border-collapse: collapse;
+      text-align: left;
+    }
+    th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 2px;
+    };
+  </style>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
+  <div id="app">
+    <table id="films">
+<thead>
+      <tr>
+        <th>Title</th>
+        <th>Year</th>
+        <th>Director</th>
+        <th>Budget</th>
+      </tr>
+</thead>
+<tbody>
+  <tr v-for="film in films">
+    <td>{{ film.title }}</td>
+    <td>{{ film.year }}</td>
+    <td>{{ film.director }}</td>
+    <td>{{ film.budget }} $</td>
+
+  </tr>
+</tbody>
+    </table>
+  </div>
   <script>
     var app = new Vue({
       el: '#app',
@@ -33,9 +68,8 @@
             director: 'King Vidor',
             budget: 6000000
           }
-        ] 
+        ]
         }
-      }
     });
   </script>
 </body>
