--- a/06-VueDataBinding/bmi.html
+++ b/06-VueDataBinding/bmi.html
@@ -7,16 +7,24 @@
   <h1>Body Mass Index</h1>
   <div id="app">
     <span>Waga: </span>
-    <input> kg<br>
+    <input type="text" v-model="weight"> kg<br>
     <span>Wzrost: </span>
-    <input> cm
-    <p>Wskaźnik BMI:</p>
+    <input type="text" v-model="height"> cm
+    <p v-if="weight != 0 && height != 0">Wskaźnik BMI: {{BMI}} </p>
   </div>
   <script>
     var app = new Vue({
       el: '#app',
       data: {
-      }
+        weight: 0,
+        height: 0
+
+      },
+      computed: {
+    BMI: function () {
+      return this.weight / (this.height/100*this.height/100)
+    }
+  }
     });
   </script>
 
