--- a/07-VueComponents/university.html
+++ b/07-VueComponents/university.html
@@ -4,9 +4,21 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
+    <div id="app">
+      <datas></datas>
+</div>
+  <script>
 
-  <h1>Cracow University of Economics</h1>
-  <p>31-510 Kraków, Rakowicka 27, POLAND</p>
+      Vue.component('datas', {
+          template: '<div><h1>Cracow University of Economics</h1>31-510 Kraków, Rakowicka 27, POLAND</div>'
+      });
+
+      new Vue({
+        el: '#app'
+      });
+
+  </script>
 
 </body>
+
 </html>
